# redaerok

./: Cargo.toml  README.md  just.ts
.github/workflows/: build.yml  ci.yml  deploy-page.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
crates/app/: Cargo.toml
crates/app/src/: app.rs  camera.rs  cool18bbs4.rs  game_control.rs  lib.rs  main.rs  txt.rs
crates/app/src/components/button/: import_button.rs  mod.rs
crates/app/src/components/viewer/: txt.rs
crates/app/src/pages/: mod.rs  welcome.rs
crates/e2e/: Cargo.toml
crates/e2e/tests/: render_to_image.rs
src/: app.rs  app_control.rs  camera.rs  cool18bbs4.rs  game_control.rs  lib.rs  main.rs
src/components/: mod.rs
src/components/button/: mod.rs  normal_button.rs
src/components/input/: normal.rs
src/components/viewer/: txt.rs
src/pages/: aichat.rs  explorer.rs  mod.rs  txt_reader.rs  welcome.rs
src/resources/: app_options.rs  mod.rs  page.rs
src/states/: page.rs
web/: _headers  index.html
