[package]
name = "redaerok-app"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[dependencies]
bevy = { workspace = true }
log = { workspace = true }
flume = { workspace = true }
dotenv = { workspace = true }
scraper = { workspace = true }
ehttp = { workspace = true }
deunicode = { workspace = true }
rfd = { workspace = true }
clap = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
mimalloc = "0.1.43"
